cloud/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: flask-redirect-app-pod
  labels:
    app: flask-redirect-app
spec:
  containers:
    - name: flask-redirect-app
      image: docker.io/friedrichbrunzema/flask-redirect-app:v4
      ports:
        - containerPort: 80
