cloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-redirect-app-service
spec:
  selector:
    app: flask-redirect-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
