cloud/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: apps
  name: flask-redirect-app-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
  - host: redirect.brunzema.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: flask-redirect-app-service
            port:
              number: 80
  tls:
  - hosts:
    - redirect.brunzema.com
    secretName: redirect.brunzema.com-tls
